# metrix-analysis

./: berta.py  main.py  pyproject.toml
app/: berta.py  common.py  metrics.py  ml.py
data/: coh_metrix_connectives_training_output.csv  coh_metrix_descriptive_training_output.csv  coh_metrix_lexical diversity_training_output.csv  coh_metrix_readability_training_output.csv  coh_metrix_referential cohesion_training_output.csv  coh_metrix_syntactic complexity_training_output.csv  coh_metrix_syntactic pattern density_training_output.csv  coh_metrix_word information_training_output.csv  cohmetrix_groups.csv  multiazter_connectives_training_output.csv  multiazter_descriptive_training_output.csv  multiazter_groups.csv  multiazter_lexical diversity_training_output.csv  multiazter_readability_training_output.csv  multiazter_referential cohesion_training_output.csv  multiazter_syntactic complexity & syntactic pattern density_training_output.csv  multiazter_word frequency_training_output.csv  multiazter_word morphological information_training_output.csv  multiazter_word semantic information_training_output.csv
models/: berta_multiazter_rf.pkl  berta_multiazter_xgb.pkl  coh_metrix_connectives_lr.pkl  coh_metrix_connectives_svm.pkl  coh_metrix_connectives_xgb.pkl  coh_metrix_descriptive_lr.pkl  coh_metrix_descriptive_svm.pkl  coh_metrix_descriptive_xgb.pkl  coh_metrix_lexical diversity_lr.pkl  coh_metrix_lexical diversity_svm.pkl  coh_metrix_lexical diversity_xgb.pkl  coh_metrix_lr.pkl  coh_metrix_readability_lr.pkl  coh_metrix_readability_svm.pkl  coh_metrix_readability_xgb.pkl  (+44 more)
