[tool.poetry]
name = "metrix-analysis"
version = "0.1.0"
description = ""
authors = ["Alonso Villegas <emptysoda16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.19.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
