[tool.poetry]
name = "metrix-analysis"
version = "0.1.0"
description = ""
authors = ["Alonso Villegas <emptysoda16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datasets = "^2.19.2"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
joblib = "^1.4.2"
# tensorflow-cpu = "2.15"
transformers = "^4.41.2"
tensorflow = "^2.19.0"
tensorflow-metal = "^1.2.0"
tf-keras = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
